23 Valida bloque de codigo de while y operador de asignacion